removed fixed positioning on mobile

--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -110,7 +110,7 @@ html {
     
     body {
         overflow-y: hidden;
-        position: fixed;
+       
     }
 
     .wrapper {
